Add share point list popover
