# cdk/OpenAPI_Swagger_Definition.yaml
@@ -1716,6 +1716,40 @@ paths:
         httpMethod: POST
         type: aws_proxy
 
+  /user/{user_id}/accessible_sources:
+    <<: *commonOptions
+    get:
+      tags:
+        - User
+      summary: Get SharePoint lists accessible to a user based on their Entra group memberships
+      operationId: get_accessible_sources
+      security:
+        - userAuthorizer: []
+      parameters:
+        - name: user_id
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        "200":
+          description: List of accessible site sources
+        "400":
+          description: Invalid user_id
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
+        "500":
+          description: Internal Server Error
+      x-amazon-apigateway-integration:
+        uri:
+          Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${userFunction.Arn}/invocations
+        passthroughBehavior: "when_no_match"
+        httpMethod: POST
+        type: aws_proxy
+
   /user/{user_id}/chat_sessions/{chat_session_id}/chat_history:
     <<: *commonOptions
     get:
